# video-pipeline-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  server.py
.claude/agents/: chief-orchestrator.md  dev-engineer.md  dev-lead.md  qa-engineer.md  qa-lead.md  sec-engineer.md  sec-lead.md
.github/workflows/: ci.yml
config/: channel_config.yaml  firewall.yaml  server_reactions.yaml
config/templates/tables/: network_config.schema.yaml
core/: paths.py
core/contracts/: __init__.py  error_detail.py  fact.py  task_status.py  tool_result.py
core/engine/: __init__.py  engine.py  template_engine.py
core/excel/: __init__.py  excel_core.py
core/firewall/: __init__.py  contracts.py  firewall.py
core/ids/: __init__.py  id_generator.py  link_registry.py
core/reactions/: __init__.py  reactions.py
core/search/: __init__.py  fs_searcher.py  query_planner.py
core/state/: __init__.py  state_manager.py
core/tables/: __init__.py  tables_core.py
core/transport/: __init__.py  transport.py  tunnel.py
docs/dev/: CONTEXT_PROTOCOL.md  README.md  history_core_contracts.md  history_core_engine.md  history_core_firewall.md  history_core_ids.md  history_core_reactions.md  history_core_state.md  history_core_transport.md  history_core_transport_tunnel.md  history_server.md  questions.md  workflow.md
docs/roadmap/: 00_reality_check.md  01_master_roadmap.md  02_findings.md  03_testing_plan.md  04_github_adoption.md  05_data_template_media_system.md  06_threat_catalog.md  07_maturity_rubric.md  08_pass_closure.md  09_agent_org.md  10_pattern_uniqueness_system.md  11_system_requirements.md  12_a2_split_plan.md  13_a1_table_loader_plan.md  README.md  _sessions.md
tests/: CATALOG.md  README.md
tests/agent_swarm/: history.md  patterns.yaml
tests/bot_army/: history.md  test_bot_army.py
tests/cache_injection/: history.md  test_cache_injection.py
tests/cache_overflow/: history.md  test_cache_overflow.py
tests/config/: scenarios.yaml
tests/config_change/: history.md  test_config_change.py
tests/quick/: README.md  history.md  test_audit_fixes.py  test_firewall.py  test_search.py  test_structure.py  test_tables.py  test_tunnel.py
tests/render_draft_final/: history.md  test_render_draft_final.py
tests/virus_injection/: history.md  test_virus_injection.py
(+85 files in other folders)
